--- a/common/common.properties
+++ b/common/common.properties
@@ -22,6 +22,7 @@ export TF_VAR_project_name=${TG_PROJECT_NAME}
 export TF_VAR_environment_type=${TG_ENVIRONMENT_TYPE}
 export TF_VAR_bastion_inventory=${TG_BASTION_INVENTORY}
 export TF_VAR_owner=${OWNER}
+export TF_VAR_github_token=${GITHUB_TOKEN}
 
 export TF_VAR_is_production=${IS_PRODUCTION}
 export TF_VAR_environment_identifier=${TG_ENVIRONMENT_IDENTIFIER}
