--- a/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
@@ -31,3 +31,5 @@ oracle_software:
     version: 12.2.0.1.29
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.29.zip
 fsfo_mode: observe
+# DSD occasionally suffers from memory pressure and swapping - allow high FSFO threshold to avoid false failover.
+target_fsfo_threshold: 600
