--- a/delius-prod/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-prod/ansible/group_vars/misdsd_primarydb.yml
@@ -27,3 +27,6 @@ oracle_software:
   opatch:
     version: 12.2.0.1.29
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.29.zip
+database_parameters:
+   sga_max_size: 5G
+   sga_target: 5G
