--- a/delius-prod/ansible/group_vars/misdsd_standbydb1.yml
+++ b/delius-prod/ansible/group_vars/misdsd_standbydb1.yml
@@ -10,3 +10,6 @@ sqlnet_parameters:
 listener_parameters:
    grid:
        INBOUND_CONNECT_TIMEOUT_LISTENER: 300
+database_parameters:
+   sga_max_size: 5G
+   sga_target: 5G
