--- a/delius-test/ansible/group_vars/delius_primarydb.yml
+++ b/delius-test/ansible/group_vars/delius_primarydb.yml
@@ -44,3 +44,7 @@ oracle_software:
           filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
 database_parameters:
    processes: 1000
+database_locked_statistics:
+   - schema_name: DELIUS_APP_SCHEMA
+     table_names:
+      - DOC_MIGRATION_QUEUE_TAB: ALL
