--- a/delius-pre-prod/ansible/group_vars/misboe_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/misboe_primarydb.yml
@@ -42,4 +42,4 @@ oracle_software:
     version: 12.2.0.1.32
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
 rman_level_0_backup_duration_target: "06:00"
-fsfo_mode: observe
+fsfo_mode: enable
