--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -62,7 +62,7 @@ oracle_software:
   opatch:
     version: 12.2.0.1.32
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
-fsfo_mode: enable
+fsfo_mode: enabled
 audited_interaction_repo: PRDNDA
 database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
