--- a/delius-prod/ansible/group_vars/misboe_standbydb1.yml
+++ b/delius-prod/ansible/group_vars/misboe_standbydb1.yml
@@ -17,6 +17,8 @@ required_patches:
            filename: p26749785_1912000DBRU_Generic.zip
          - target_version: "19.14"
            filename: p26749785_1914000DBRU_Generic.zip
+         - target_version: "19.16"
+           filename: p26749785_1916000DBRU_Generic.zip
       description: PERF_DIAG NEED TO HAVE MORE CONTROL IN DICTIONARY FOR AUTO_STATS_ADVISOR_TASK
       grid_patch: false
       database_patch: true
