Set AWR Retention to just over 1 month

--- a/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
@@ -7,3 +7,4 @@ database_parameters:
    control_management_pack_access: DIAGNOSTIC+TUNING
    adg_account_info_tracking: GLOBAL
 active_data_guard: true
+awr_retention_days: 40
