--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -55,6 +55,7 @@ delius_users:
      ash_report: true
   ataboudi_ro:
      ash_report: true
+  worr_sro:
 oracle_software:
   version: 19.16
   superset_patch: p34130714_190000_Linux-x86-64.zip
