--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -20,6 +20,7 @@ delius_users:
   kmoss_dba:
   smauthoor_sro:
   acody_sro:
+  worr_sro:
 oracle_software:
   version: 19.16
   superset_patch: p34130714_190000_Linux-x86-64.zip
