--- a/delius-core-dev/ansible/group_vars/delius_primarydb.yml
+++ b/delius-core-dev/ansible/group_vars/delius_primarydb.yml
@@ -18,12 +18,11 @@ delius_users:
   kmoss_dba:
   worr_sro:
 oracle_software:
-      version: 19.16
-      superset_patch: p34130714_190000_Linux-x86-64.zip
-      ojvm_patch: p34086870_190000_Linux-x86-64.zip    
+      version: 19.18
+      combo_patch: p34773504_190000_Linux-x86-64.zip
       opatch:
-          version: 12.2.0.1.32
-          filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
+          version: 12.2.0.1.36
+          filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
 audited_interaction_repo: TSTNDA
 fsfo_mode: observe
 database_locked_statistics:
