--- a/delius-mis-dev/ansible/group_vars/misboe_primarydb.yml
+++ b/delius-mis-dev/ansible/group_vars/misboe_primarydb.yml
@@ -18,6 +18,8 @@ required_patches:
             filename: p26749785_1914000DBRU_Generic.zip
           - target_version: "19.16"
             filename: p26749785_1916000DBRU_Generic.zip
+          - target_version: "19.18"
+            filename: p26749785_1918000DBRU_Generic.zip
       description: PERF_DIAG NEED TO HAVE MORE CONTROL IN DICTIONARY FOR AUTO_STATS_ADVISOR_TASK
       grid_patch: false
       database_patch: true
