Reduce FRA due to reduced FLASH diskgroup size

--- a/delius-mis-dev/ansible/group_vars/misboe_primarydb.yml
+++ b/delius-mis-dev/ansible/group_vars/misboe_primarydb.yml
@@ -7,6 +7,7 @@ database_primary_sid: DMDBOE
 database_parameters:
    sga_max_size: 1G
    sga_target: 1G
+   db_recovery_file_dest_size: 90G
 required_patches:
     p26749785:
       patch_files:
