Increase FRA Size

--- a/delius-mis-dev/ansible/group_vars/delius_primarydb.yml
+++ b/delius-mis-dev/ansible/group_vars/delius_primarydb.yml
@@ -21,3 +21,5 @@ database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
      table_names:
       - DOC_MIGRATION_QUEUE_TAB: ALL
+database_parameters:
+   db_recovery_file_dest_size: 450G
