Reduce FRA Size for DSD

--- a/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
@@ -8,6 +8,7 @@ oracle_osbws_chunk_size: 104857600
 database_parameters:
    sga_max_size: 5G
    sga_target: 5G
+   db_recovery_file_dest_size: 150G
 rman_retention_policy: RECOVERY WINDOW OF 31 DAYS
 sqlnet_parameters:
    grid:
