--- a/delius-pre-prod/ansible/group_vars/misdsd_standbydb1.yml
+++ b/delius-pre-prod/ansible/group_vars/misdsd_standbydb1.yml
@@ -5,6 +5,7 @@ database_standby_sid: PREDSDS1
 database_parameters:
    sga_max_size: 5G
    sga_target: 5G
+   db_recovery_file_dest_size: 150G
 # SQLNET.INBOUND_CONNECT_TIMEOUT controls timeout for establishing connection to Listener
 sqlnet_parameters:
    grid:
