--- a/delius-stage/ansible/group_vars/delius_primarydb.yml
+++ b/delius-stage/ansible/group_vars/delius_primarydb.yml
@@ -31,6 +31,16 @@ delius_users:
   dreid_dba:
   sgandalwar_dba:
   kmoss_dba:
+  jmacbeth_ro:
+  jdundon_ro:
+  yfedkiv_dba:
+  mthapa_ro:
+  maspin_ro:
+  mlaskowski_ro:
+  pmiller_ro:
+  pwilson_ro:
+  rmccormack_ro:
+  svalmonte_ro:
 oracle_software:
   version: 19.18
   combo_patch: p34773504_190000_Linux-x86-64.zip
