--- a/delius-prod/ansible/group_vars/mis_primarydb.yml
+++ b/delius-prod/ansible/group_vars/mis_primarydb.yml
@@ -36,3 +36,4 @@ oracle_software:
   opatch:
     version: 12.2.0.1.32
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
+awr_retention_days: 40
