Typo in Michael Wetherall's Username

--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -25,7 +25,7 @@ delius_users:
   jdundon_ro:
   mthapa_ro:
   maspin_ro:
-  mweatherall_ro:
+  mwetherall_ro:
   mlaskowski_ro:
   pmiller_ro:
   pwilson_ro:
