--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -32,6 +32,8 @@ delius_users:
   rmccormack_ro:
   svalmonte_ro:
   yfedkiv_ro:
+  abritton_ro:
+  smcallister_ro:
 oracle_software:
   version: 19.16
   superset_patch: p34130714_190000_Linux-x86-64.zip
