--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -67,6 +67,7 @@ delius_users:
   pwilson_ro:
   rmccormack_ro:
   svalmonte_ro:
+  jrobson_ro:
 oracle_software:
   version: 19.16
   superset_patch: p34130714_190000_Linux-x86-64.zip
