--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -34,6 +34,7 @@ delius_users:
   yfedkiv_ro:
   abritton_ro:
   smcallister_ro:
+  jrobson_ro:
 oracle_software:
   version: 19.16
   superset_patch: p34130714_190000_Linux-x86-64.zip
