--- a/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
@@ -5,5 +5,5 @@ database_standby_sid: PRENDAS1
 database_primary_unique: PRENDA
 database_parameters:
    control_management_pack_access: DIAGNOSTIC+TUNING
-   adg_account_info_tracking: GLOBAL
+   adg_account_info_tracking: LOCAL
 active_data_guard: true
