--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -6,7 +6,7 @@ database_primary_unique: PRDNDA
 database_primary_sid: PRDNDA
 database_parameters:
    control_management_pack_access: DIAGNOSTIC+TUNING
-   adg_account_info_tracking: GLOBAL
+   adg_account_info_tracking: LOCAL
 rman_level_0_backup_duration_target: "12:00"
 rman_uncompressed_backup: Y
 rman_retention_policy: RECOVERY WINDOW OF 366 DAYS
