--- a/delius-prod/ansible/group_vars/delius_standbydb2.yml
+++ b/delius-prod/ansible/group_vars/delius_standbydb2.yml
@@ -5,5 +5,5 @@ database_standby_sid: PRDNDAS2
 database_primary_unique: PRDNDA
 database_parameters:
    control_management_pack_access: DIAGNOSTIC+TUNING
-   adg_account_info_tracking: GLOBAL
+   adg_account_info_tracking: LOCAL
 active_data_guard: true
