--- a/delius-core-dev/ansible/group_vars/delius_primarydb.yml
+++ b/delius-core-dev/ansible/group_vars/delius_primarydb.yml
@@ -28,3 +28,4 @@ database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
      table_names:
       - DOC_MIGRATION_QUEUE_TAB: ALL
+fsfo_mode: observe
