Disable Legacy Mode FSFO
Switch off old FSFO implementation ahead of DBA-380

--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -73,7 +73,7 @@ oracle_software:
       opatch:
           version: 12.2.0.1.36
           filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
-fsfo_mode: enabled
+fsfo_mode: disabled
 audited_interaction_repo: PRDNDA
 database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
