--- a/delius-pre-prod/ansible/group_vars/mis_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/mis_primarydb.yml
@@ -36,5 +36,5 @@ oracle_software:
   opatch:
     version: 12.2.0.1.32
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
-fsfo_mode: enabled
+fsfo_mode: disabled
 awr_retention_days: 40
