--- a/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
@@ -31,4 +31,4 @@ oracle_software:
   opatch:
     version: 12.2.0.1.32
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
-fsfo_mode: enabled
+fsfo_mode: disabled
