--- a/delius-stage/ansible/group_vars/mis_primarydb.yml
+++ b/delius-stage/ansible/group_vars/mis_primarydb.yml
@@ -27,7 +27,7 @@ required_patches:
       patch_files:
          - target_version: "19.9"
            filename: p35012866_1918000DBRU_Linux-x86-64.zip
-      description: BUG_33527739_APPLY.SQL GOT ORA-13516: AWR OPERATION FAILED: CATPROC NOT VALID
+      description: "BUG_33527739_APPLY.SQL GOT ORA-13516: AWR OPERATION FAILED: CATPROC NOT VALID"
       grid_patch: false
       database_patch: true
       datapatch_required: true
