--- a/delius-stage/ansible/group_vars/delius_primarydb.yml
+++ b/delius-stage/ansible/group_vars/delius_primarydb.yml
@@ -47,6 +47,15 @@ oracle_software:
   opatch:
     version: 12.2.0.1.36
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
+required_patches:
+    p35012866:
+      patch_files:
+         - target_version: "19.18"
+           filename: p35012866_1918000DBRU_Linux-x86-64.zip
+      description: "BUG_33527739_APPLY.SQL GOT ORA-13516: AWR OPERATION FAILED: CATPROC NOT VALID"
+      grid_patch: false
+      database_patch: true
+      datapatch_required: true
 database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
      table_names:
