--- a/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/misdsd_primarydb.yml
@@ -31,3 +31,12 @@ oracle_software:
           version: 12.2.0.1.36
           filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
 fsfo_mode: disabled
+required_patches:
+    p35012866:
+      patch_files:
+         - target_version: "19.18"
+           filename: p35012866_1918000DBRU_Linux-x86-64.zip
+      description: "BUG_33527739_APPLY.SQL GOT ORA-13516: AWR OPERATION FAILED: CATPROC NOT VALID"
+      grid_patch: false
+      database_patch: true
+      datapatch_required: true
