--- a/delius-pre-prod/ansible/group_vars/misdsd_standbydb1.yml
+++ b/delius-pre-prod/ansible/group_vars/misdsd_standbydb1.yml
@@ -16,3 +16,12 @@ sqlnet_parameters:
 listener_parameters:
    grid:
        INBOUND_CONNECT_TIMEOUT_LISTENER: 300
+required_patches:
+    p35012866:
+      patch_files:
+         - target_version: "19.18"
+           filename: p35012866_1918000DBRU_Linux-x86-64.zip
+      description: "BUG_33527739_APPLY.SQL GOT ORA-13516: AWR OPERATION FAILED: CATPROC NOT VALID"
+      grid_patch: false
+      database_patch: true
+      datapatch_required: true
