--- a/delius-prod/ansible/group_vars/misboe_primarydb.yml
+++ b/delius-prod/ansible/group_vars/misboe_primarydb.yml
@@ -22,6 +22,8 @@ required_patches:
            filename: p26749785_1914000DBRU_Generic.zip
          - target_version: "19.16"
            filename: p26749785_1916000DBRU_Generic.zip
+         - target_version: "19.18"
+           filename: p26749785_1918000DBRU_Generic.zip
       description: PERF_DIAG NEED TO HAVE MORE CONTROL IN DICTIONARY FOR AUTO_STATS_ADVISOR_TASK
       grid_patch: false
       database_patch: true
@@ -35,10 +37,9 @@ delius_users:
   sgandalwar_dba:
   kmoss_dba:
 oracle_software:
-  version: 19.16
-  superset_patch: p34130714_190000_Linux-x86-64.zip
-  ojvm_patch: p34086870_190000_Linux-x86-64.zip
-  opatch:
-    version: 12.2.0.1.32
-    filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
+      version: 19.18
+      combo_patch: p34773504_190000_Linux-x86-64.zip
+      opatch:
+          version: 12.2.0.1.36
+          filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
 rman_level_0_backup_duration_target: "06:00"
