--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -35,6 +35,7 @@ delius_users:
   abritton_ro:
   smcallister_ro:
   jrobson_ro:
+  sbathina_sro:
 oracle_software:
       version: 19.18
       combo_patch: p34773504_190000_Linux-x86-64.zip
