Access for David Bridgwood to ADG database

--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -67,6 +67,7 @@ delius_users:
   pwilson_ro:
   rmccormack_ro:
   svalmonte_ro:
+  dbridgwood_sro:
 oracle_software:
       version: 19.18
       combo_patch: p34773504_190000_Linux-x86-64.zip
