--- a/delius-training/ansible/group_vars/delius_primarydb.yml
+++ b/delius-training/ansible/group_vars/delius_primarydb.yml
@@ -11,12 +11,11 @@ delius_users:
   sgandalwar_dba:
   kmoss_dba:
 oracle_software:
-  version: 19.16
-  superset_patch: p34130714_190000_Linux-x86-64.zip
-  ojvm_patch: p34086870_190000_Linux-x86-64.zip
+  version: 19.18
+  combo_patch: p34773504_190000_Linux-x86-64.zip
   opatch:
-    version: 12.2.0.1.32
-    filename: p6880880_190000_Linux-x86-64.12.2.0.1.32.zip
+    version: 12.2.0.1.36
+    filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
 database_parameters:
    sga_max_size: 2G
    sga_target: 2G
