--- a/delius-mis-dev/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-mis-dev/ansible/group_vars/misdsd_primarydb.yml
@@ -23,8 +23,8 @@ delius_users:
   sgandalwar_dba:
   kmoss_dba:
 oracle_software:
-  version: 19.18
-  combo_patch: p34773504_190000_Linux-x86-64.zip
-  opatch:
-    version: 12.2.0.1.36
-    filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
+      version: '19.20'
+      combo_patch: p35370167_190000_Linux-x86-64.zip
+      opatch:
+          version: 12.2.0.1.39
+          filename: p6880880_190000_Linux-x86-64.12.2.0.1.39.zip
