Enable Profiler Callback

--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -10,6 +10,8 @@ hash_behaviour = merge
 # Override the "Managed by" line for templates to reduce the chances of changes
 # being made to files when run by different people on different machines.
 ansible_managed = DO NOT EDIT - Managed by Ansible
+# From Ansible 2.11 some callbacks must be explicitly enabled
+callbacks_enabled = profile_tasks
 
 [ssh_connection]
 scp_if_ssh = True
