--- a/delius-test/ansible/group_vars/delius_primarydb.yml
+++ b/delius-test/ansible/group_vars/delius_primarydb.yml
@@ -36,6 +36,7 @@ delius_users:
   swatson_ro:
   mheywardchaplin_ro:
   ahughes_ro:
+  wwang_ro:
 oracle_software:
   version: 19.18
   combo_patch: p34773504_190000_Linux-x86-64.zip
