--- a/delius-prod/ansible/group_vars/delius_standbydb1.yml
+++ b/delius-prod/ansible/group_vars/delius_standbydb1.yml
@@ -6,4 +6,12 @@ database_primary_unique: PRDNDA
 database_parameters:
    control_management_pack_access: DIAGNOSTIC+TUNING
    adg_account_info_tracking: LOCAL
-
+required_patches:
+    p35012866:
+      patch_files:
+         - target_version: "19.18"
+           filename: p35012866_1918000DBRU_Linux-x86-64.zip
+      description: "BUG_33527739_APPLY.SQL GOT ORA-13516: AWR OPERATION FAILED: CATPROC NOT VALID"
+      grid_patch: false
+      database_patch: true
+      datapatch_required: true
