--- a/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
@@ -6,7 +6,7 @@ database_primary_unique: PRENDA
 database_parameters:
    control_management_pack_access: DIAGNOSTIC+TUNING
    adg_account_info_tracking: LOCAL
-active_data_guard: true
+active_data_guard: false
 required_patches:
     p35012866:
       patch_files:
