Enable FSFO for Mis-Dev

--- a/delius-mis-dev/ansible/group_vars/delius_primarydb.yml
+++ b/delius-mis-dev/ansible/group_vars/delius_primarydb.yml
@@ -23,3 +23,4 @@ database_locked_statistics:
       - DOC_MIGRATION_QUEUE_TAB: ALL
 database_parameters:
    db_recovery_file_dest_size: 450G
+fsfo_mode: enabled
