--- a/delius-test/ansible/group_vars/delius_primarydb.yml
+++ b/delius-test/ansible/group_vars/delius_primarydb.yml
@@ -37,6 +37,8 @@ delius_users:
   mheywardchaplin_ro:
   ahughes_ro:
   wwang_ro:
+  pmcphee_ro:
+  achimber_ro:
 oracle_software:
       version: '19.22'
       combo_patch: p36031453_190000_Linux-x86-64.zip
