--- a/delius-stage/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-stage/ansible/group_vars/misdsd_primarydb.yml
@@ -8,6 +8,7 @@ database_parameters:
    sga_max_size: 5G
    sga_target: 5G
 rman_retention_policy: RECOVERY WINDOW OF 31 DAYS
+oracle_osbws_chunk_size: 52428800
 sqlnet_parameters:
    grid:
          SQLNET.INBOUND_CONNECT_TIMEOUT: 300
