--- a/delius-stage/ansible/group_vars/delius_primarydb.yml
+++ b/delius-stage/ansible/group_vars/delius_primarydb.yml
@@ -62,3 +62,4 @@ database_locked_statistics:
       - DOC_MIGRATION_QUEUE_TAB: ALL
 database_parameters:
    db_recovery_file_dest_size: 900G
+audited_interaction_client: true
