Add Paul Mcphee Delius read only user

--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -70,6 +70,7 @@ delius_users:
   dbridgwood_sro:
   wwang_ro:
   achimber_ro:
+  pmcphee_ro:
 oracle_software:
       version: 19.18
       combo_patch: p34773504_190000_Linux-x86-64.zip
