--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -39,6 +39,7 @@ delius_users:
   dbridgwood_sro:
   achimber_sro:
   mryall_sro:
+  pmcphee_sro:
 oracle_software:
       version: 19.18
       combo_patch: p34773504_190000_Linux-x86-64.zip
