--- a/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
@@ -6,6 +6,8 @@ database_primary_unique: PRENDA
 database_parameters:
    control_management_pack_access: DIAGNOSTIC+TUNING
    adg_account_info_tracking: LOCAL
+   sga_max_size: 50G
+   sga_target: 50G
 active_data_guard: true
 required_patches:
     p35012866:
