--- a/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_standbydb1.yml
@@ -8,6 +8,7 @@ database_parameters:
    adg_account_info_tracking: LOCAL
    sga_max_size: 50G
    sga_target: 50G
+   pga_aggregate_limit: 40G
 active_data_guard: true
 required_patches:
     p35012866:
