--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -81,10 +81,14 @@ oracle_software:
           version: 12.2.0.1.41
           filename: p6880880_190000_Linux-x86-64.12.2.0.1.41.zip
 fsfo_mode: disabled
+# OFFENDER_DELTA and DOMAIN_EVENT are dynamic tables cleared down by Integration Services.
+# Prevent changing these to unrepresentative statistics.
 database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
      table_names:
       - DOC_MIGRATION_QUEUE_TAB: ALL
+      - OFFENDER_DELTA: ALL
+      - DOMAIN_EVENT: ALL
 awr_retention_days: 40
 required_patches:
     p35012866:
