--- a/delius-stage/ansible/group_vars/delius_primarydb.yml
+++ b/delius-stage/ansible/group_vars/delius_primarydb.yml
@@ -47,10 +47,14 @@ oracle_software:
       opatch:
           version: 12.2.0.1.41
           filename: p6880880_190000_Linux-x86-64.12.2.0.1.41.zip
+# OFFENDER_DELTA and DOMAIN_EVENT are dynamic tables cleared down by Integration Services.
+# Prevent changing these to unrepresentative statistics.
 database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
      table_names:
       - DOC_MIGRATION_QUEUE_TAB: ALL
+      - OFFENDER_DELTA: ALL
+      - DOMAIN_EVENT: ALL
 database_parameters:
    db_recovery_file_dest_size: 900G
 audited_interaction_client: true
