--- a/delius-test/ansible/group_vars/delius_primarydb.yml
+++ b/delius-test/ansible/group_vars/delius_primarydb.yml
@@ -47,7 +47,11 @@ oracle_software:
           filename: p6880880_190000_Linux-x86-64.12.2.0.1.41.zip
 database_parameters:
    processes: 1500
+# OFFENDER_DELTA and DOMAIN_EVENT are dynamic tables cleared down by Integration Services.
+# Prevent changing these to unrepresentative statistics.
 database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
      table_names:
       - DOC_MIGRATION_QUEUE_TAB: ALL
+      - OFFENDER_DELTA: ALL
+      - DOMAIN_EVENT: ALL
