--- a/delius-training/ansible/group_vars/delius_primarydb.yml
+++ b/delius-training/ansible/group_vars/delius_primarydb.yml
@@ -19,10 +19,14 @@ oracle_software:
 database_parameters:
    sga_max_size: 2G
    sga_target: 2G
+# OFFENDER_DELTA and DOMAIN_EVENT are dynamic tables cleared down by Integration Services.
+# Prevent changing these to unrepresentative statistics.
 database_locked_statistics:
    - schema_name: DELIUS_APP_SCHEMA
      table_names:
       - DOC_MIGRATION_QUEUE_TAB: ALL
+      - OFFENDER_DELTA: ALL
+      - DOMAIN_EVENT: ALL
 required_patches:
     p35012866:
       patch_files:
