--- a/delius-prod/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-prod/ansible/group_vars/misdsd_primarydb.yml
@@ -21,11 +21,11 @@ delius_users:
   sgandalwar_dba:
   kmoss_dba:
 oracle_software:
-      version: 19.18
-      combo_patch: p34773504_190000_Linux-x86-64.zip
+      version: '19.22'
+      combo_patch: p36031453_190000_Linux-x86-64.zip
       opatch:
-          version: 12.2.0.1.36
-          filename: p6880880_190000_Linux-x86-64.12.2.0.1.36.zip
+          version: 12.2.0.1.41
+          filename: p6880880_190000_Linux-x86-64.12.2.0.1.41.zip
 database_parameters:
    sga_max_size: 5G
    sga_target: 5G
