--- a/delius-stage/ansible/group_vars/misdsd_primarydb.yml
+++ b/delius-stage/ansible/group_vars/misdsd_primarydb.yml
@@ -9,6 +9,7 @@ database_parameters:
    sga_target: 5G
 rman_retention_policy: RECOVERY WINDOW OF 31 DAYS
 oracle_osbws_chunk_size: 52428800
+rman_level_0_backup_duration_target: "12:00"
 sqlnet_parameters:
    grid:
          SQLNET.INBOUND_CONNECT_TIMEOUT: 300
