--- a/delius-prod/ansible/group_vars/mis_standbydb1.yml
+++ b/delius-prod/ansible/group_vars/mis_standbydb1.yml
@@ -18,5 +18,12 @@ required_patches:
       database_patch: true
       datapatch_required: false
       replaces_patch: "30616738"
+    p34755459:
+      patch_files:
+        - target_version: "19.24"
+          filename: p34755459_1924000DBRU_Linux-x86-64.zip
+      description: "ORA-00600 [QERIXGETKEY OPTDESC] WITH FUNCTION BASED INDEX ON SUBSTR"
+      grid_patch: false
+      database_patch: true
 data_guard_parameters:
    ApplyLagThreshold: 1000
