--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -74,6 +74,8 @@ delius_users:
   wwang_ro:
   achimber_ro:
   pmcphee_ro:
+  acraik_sro:
+  gwheeler_sro:
 oracle_software:
       version: '19.24'
       combo_patch: p36522439_190000_Linux-x86-64.zip
