--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -43,6 +43,8 @@ delius_users:
   achimber_sro:
   mryall_sro:
   pmcphee_sro:
+  acraik_sro:
+  gwheeler_sro:
 oracle_software:
       version: '19.24'
       combo_patch: p36522439_190000_Linux-x86-64.zip
