--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -18,9 +18,8 @@ delius_users:
   nhodgkinson_ro:
   bbuchan_dba:
   rsingh_dba:
-  dreid_dba:
-  sgandalwar_dba:
   kmoss_dba:
+  dbelton_dba:
   smauthoor_sro:
   acody_sro:
   worr_sro:
