--- a/delius-training/ansible/group_vars/delius_primarydb.yml
+++ b/delius-training/ansible/group_vars/delius_primarydb.yml
@@ -7,9 +7,8 @@ database_primary_sid: TRNDA
 delius_users:
   bbuchan_dba:
   rsingh_dba:
-  dreid_dba:
-  sgandalwar_dba:
   kmoss_dba:
+  dbelton_dba:
 oracle_software:
       version: '19.24'
       combo_patch: p36522439_190000_Linux-x86-64.zip
