--- a/delius-prod/ansible/group_vars/misboe_primarydb.yml
+++ b/delius-prod/ansible/group_vars/misboe_primarydb.yml
@@ -37,9 +37,8 @@ database_autotasks:
 delius_users:
   bbuchan_dba:
   rsingh_dba:
-  dreid_dba:
-  sgandalwar_dba:
   kmoss_dba:
+  dbelton_dba:
 oracle_software:
       version: '19.24'
       combo_patch: p36522439_190000_Linux-x86-64.zip
