--- a/delius-stage/ansible/group_vars/delius_primarydb.yml
+++ b/delius-stage/ansible/group_vars/delius_primarydb.yml
@@ -34,9 +34,8 @@ delius_users:
   nhodgkinson_ro:
   bbuchan_dba:
   rsingh_dba:
-  dreid_dba:
-  sgandalwar_dba:
   kmoss_dba:
+  dbelton_dba:
   jmacbeth_ro:
   jdundon_ro:
   yfedkiv_dba:
