--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -75,6 +75,7 @@ delius_users:
   pmcphee_ro:
   acraik_sro:
   gwheeler_sro:
+  lnagarur_sro:
 oracle_software:
       version: '19.25'
       combo_patch: p36866740_190000_Linux-x86-64.zip
