--- a/delius-test/ansible/group_vars/delius_primarydb.yml
+++ b/delius-test/ansible/group_vars/delius_primarydb.yml
@@ -38,6 +38,7 @@ delius_users:
   wwang_ro:
   pmcphee_ro:
   achimber_ro:
+  hmpps_data_hub_ro:
 oracle_software:
       version: '19.25'
       combo_patch: p36866740_190000_Linux-x86-64.zip
