--- a/delius-stage/ansible/group_vars/delius_primarydb.yml
+++ b/delius-stage/ansible/group_vars/delius_primarydb.yml
@@ -46,11 +46,11 @@ delius_users:
   rmccormack_ro:
   svalmonte_ro:
 oracle_software:
-      version: '19.25'
-      combo_patch: p36866740_190000_Linux-x86-64.zip
-      opatch:
-          version: 12.2.0.1.43
-          filename: p6880880_190000_Linux-x86-64.12.2.0.1.43.zip
+  version: "19.27"
+  combo_patch: p37591516_190000_Linux-x86-64.zip
+  opatch:
+    version: 12.2.0.1.46
+    filename: p6880880_190000_Linux-x86-64.12.2.0.1.46.zip
 # OFFENDER_DELTA and DOMAIN_EVENT are dynamic tables cleared down by Integration Services.
 # Prevent changing these to unrepresentative statistics.
 database_locked_statistics:
