--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -77,11 +77,11 @@ delius_users:
   lnagarur_sro:
   sbathina_sro:
 oracle_software:
-      version: '19.25'
-      combo_patch: p36866740_190000_Linux-x86-64.zip
-      opatch:
-          version: 12.2.0.1.43
-          filename: p6880880_190000_Linux-x86-64.12.2.0.1.43.zip
+  version: "19.27"
+  combo_patch: p37591516_190000_Linux-x86-64.zip
+  opatch:
+    version: 12.2.0.1.46
+    filename: p6880880_190000_Linux-x86-64.12.2.0.1.46.zip
 fsfo_mode: disabled
 # OFFENDER_DELTA and DOMAIN_EVENT are dynamic tables cleared down by Integration Services.
 # Prevent changing these to unrepresentative statistics.
@@ -92,13 +92,4 @@ database_locked_statistics:
       - OFFENDER_DELTA: ALL
       - DOMAIN_EVENT: ALL
 awr_retention_days: 40
-required_patches:
-    p35012866:
-      patch_files:
-         - target_version: "19.18"
-           filename: p35012866_1918000DBRU_Linux-x86-64.zip
-      description: "BUG_33527739_APPLY.SQL GOT ORA-13516: AWR OPERATION FAILED: CATPROC NOT VALID"
-      grid_patch: false
-      database_patch: true
-      datapatch_required: true
 audited_interaction_client: true
