--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -76,6 +76,7 @@ delius_users:
   gwheeler_sro:
   lnagarur_sro:
   sbathina_sro:
+  tmanassis_sro:
 oracle_software:
   version: "19.27"
   combo_patch: p37591516_190000_Linux-x86-64.zip
