--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -44,6 +44,7 @@ delius_users:
   acraik_sro:
   gwheeler_sro:
   lnagarur_sro:
+  tmanassis_sro:
 oracle_software:
       version: '19.25'
       combo_patch: p36866740_190000_Linux-x86-64.zip
