--- a/delius-stage/ansible/group_vars/delius_primarydb.yml
+++ b/delius-stage/ansible/group_vars/delius_primarydb.yml
@@ -50,6 +50,16 @@ oracle_software:
   opatch:
     version: 12.2.0.1.46
     filename: p6880880_190000_Linux-x86-64.12.2.0.1.46.zip
+required_patches:
+  p33272827:
+    patch_files:
+      - target_version: "19.27"
+        filename: p33272827_1927000DBRU_Linux-x86-64.zip
+    description: SUB-OPTIMAL PLANS IN WINDOW FUNCTION WHERE SORTING CAN BE AVOIDED
+    grid_patch: false
+    database_patch: true
+    datapatch_required: false
+    install_with_opatchauto: false
 # OFFENDER_DELTA and DOMAIN_EVENT are dynamic tables cleared down by Integration Services.
 # Prevent changing these to unrepresentative statistics.
 database_locked_statistics:
