--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -77,6 +77,7 @@ delius_users:
   lnagarur_sro:
   sbathina_sro:
   tmanassis_sro:
+  joseibonsu_ro:
 oracle_software:
   version: "19.27"
   combo_patch: p37591516_190000_Linux-x86-64.zip
