--- a/delius-training/ansible/group_vars/delius_primarydb.yml
+++ b/delius-training/ansible/group_vars/delius_primarydb.yml
@@ -9,11 +9,11 @@ delius_users:
   kmoss_dba:
   dbelton_dba:
 oracle_software:
-      version: '19.25'
-      combo_patch: p36866740_190000_Linux-x86-64.zip
-      opatch:
-          version: 12.2.0.1.43
-          filename: p6880880_190000_Linux-x86-64.12.2.0.1.43.zip
+  version: "19.27"
+  combo_patch: p37591516_190000_Linux-x86-64.zip
+  opatch:
+    version: 12.2.0.1.46
+    filename: p6880880_190000_Linux-x86-64.12.2.0.1.46.zip
 database_parameters:
    sga_max_size: 2G
    sga_target: 2G
