New User Request (Probation Integration)

--- a/delius-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-prod/ansible/group_vars/delius_primarydb.yml
@@ -42,6 +42,7 @@ delius_users:
   acraik_sro:
   gwheeler_sro:
   lnagarur_sro:
+  sbailey_ro:
 oracle_software:
   version: "19.27"
   combo_patch: p37591516_190000_Linux-x86-64.zip
