--- a/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
+++ b/delius-pre-prod/ansible/group_vars/delius_primarydb.yml
@@ -75,6 +75,7 @@ delius_users:
   gwheeler_sro:
   lnagarur_sro:
   joseibonsu_ro:
+  sbailey_ro:
 oracle_software:
   version: "19.27"
   combo_patch: p37591516_190000_Linux-x86-64.zip
